--- a/main.ipynb
+++ b/main.ipynb
@@ -2834,7 +2834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- The predicted output of sample data is saved into \".csv\" file."
+    "- The predicted outputs of sample data is saved into \".csv\" file."
    ]
   },
   {
